# rustlings

./: .gitignore
exercises/: quiz1.rs  quiz4.rs
exercises/clippy/: clippy1.rs
exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
exercises/enums/: enums2.rs  enums3.rs
exercises/error_handling/: errors1.rs  errors2.rs  errorsn.rs
exercises/functions/: functions1.rs
exercises/generics/: generics2.rs  generics3.rs
exercises/move_semantics/: move_semantics2.rs  move_semantics4.rs
exercises/option/: option1.rs
exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
exercises/standard_library_types/: box1.rs  iterators2.rs  iterators3.rs  iterators4.rs
exercises/structs/: structs1.rs  structs2.rs  structs3.rs
exercises/tests/: tests1.rs
exercises/threads/: threads1.rs
exercises/traits/: traits1.rs  traits2.rs
exercises/variables/: variables2.rs  variables5.rs
web/: .gitignore  Cargo.toml
web/src/: main.rs
webapp/pastebin/: Cargo.toml
webapp/pastebin/src/: main.rs  paste_id.rs
webapp/pastebin/static/: index.html
webapp/web-basic/: Cargo.toml
webapp/web-basic/src/: main.rs
