[package]
name = "pastebin"
version = "0.1.0"
authors = ["liushuwei <liushuwei@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
http = "0.2.1"
log = "0.4.8"
env_logger = "0.7.1"
